@@ -603,8 +603,9 @@ typedef priority_queue<pair<rev_height, revision_id>,
 CMD(log, N_("informative"), N_("[FILE] ..."),
     N_("print history in reverse order (filtering by 'FILE'). If one or more\n"
     "revisions are given, use them as a starting point."),
-    options::opts::last | options::opts::next | options::opts::revision | options::opts::brief
-    | options::opts::diffs | options::opts::no_merges | options::opts::no_files)
+    options::opts::last | options::opts::next | options::opts::revision
+    | options::opts::brief | options::opts::diffs | options::opts::no_merges
+    | options::opts::no_files | options::opts::to)
 {
   if (app.opts.revision_selectors.size() == 0)
     app.require_workspace("try passing a --revision to start at");
@@ -616,7 +617,7 @@ CMD(log, N_("informative"), N_("[FILE] ..."),
     F("only one of --last/--next allowed"));
 
   frontier_t frontier(rev_cmp(!(next>0)));
-  revision_id first_rid;
+  revision_id first_rid; // for mapping paths to node ids when restricted
 
   if (app.opts.revision_selectors.size() == 0)
     {
@@ -666,6 +667,62 @@ CMD(log, N_("informative"), N_("[FILE] ..."),
                               args_to_paths(app.opts.exclude_patterns), 
                               app.opts.depth,
                               old_roster, new_roster, app);
+    }
+
+  // If --to was given, don't log past those revisions.
+  set<revision_id> disallowed;
+  bool use_disallowed(!app.opts.to.empty());
+  if (use_disallowed)
+    {
+      std::deque<revision_id> to;
+      for (vector<utf8>::const_iterator i = app.opts.to.begin();
+           i != app.opts.to.end(); i++)
+        {
+          MM(*i);
+          set<revision_id> rids;
+          complete(app, (*i)(), rids);
+          for (set<revision_id>::const_iterator j = rids.begin();
+               j != rids.end(); ++j)
+            {
+              I(!null_id(*j));
+              pair<set<revision_id>::iterator, bool> res = disallowed.insert(*j);
+              if (res.second)
+                {
+                  to.push_back(*j);
+                }
+            }
+        }
+
+      while (!to.empty())
+        {
+          revision_id const & rid(to.front());
+          MM(rid);
+
+          set<revision_id> relatives;
+          MM(relatives);
+          if (next > 0)
+            {
+              app.db.get_revision_children(rid, relatives);
+            }
+          else
+            {
+              app.db.get_revision_parents(rid, relatives);
+            }
+
+          for (set<revision_id>::const_iterator i = relatives.begin();
+               i != relatives.end(); ++i)
+            {
+              if (null_id(*i))
+                continue;
+              pair<set<revision_id>::iterator, bool> res = disallowed.insert(*i);
+              if (res.second)
+                {
+                  to.push_back(*i);
+                }
+            }
+
+          to.pop_front();
+        }
     }
 
   cert_name author_name(author_cert_name);
@@ -848,6 +905,10 @@ CMD(log, N_("informative"), N_("[FILE] ..."),
       for (set<revision_id>::const_iterator i = interesting.begin();
            i != interesting.end(); ++i)
         {
+          if (use_disallowed && (disallowed.find(*i) != disallowed.end()))
+            {
+              continue;
+            }
           rev_height height;
           app.db.get_rev_height(*i, height);
           frontier.push(make_pair(height, *i));
