@@ -693,3 +693,4 @@ table.insert(tests, "automate_stdio_options")
 table.insert(tests, "spawn_redirected_hook_helper")
 table.insert(tests, "import")
 table.insert(tests, "netsync_permissions_wildcards")
+table.insert(tests, "log_--to")
