@@ -1,3 +1,9 @@
+2006-12-10  Timothy Brownawell <tbrownaw@gmail.com>
+
+	Implement a "mtn log --to <revision>", that doesn't log the
+	revisions that would be logged when <revision> was given as
+	the starting revision.
+
 2006-12-09  Richard Levitte  <richard@levitte.org>
 
 	* tests/netsync_permissions_wildcards/__driver__.lua:
